--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <script src="arcamera.js" type="text/javascript"></script>
     <script src="itracker.js" type="text/javascript"></script>
-    <script src="Build/touchNOV14-1.loader.js"></script>
+    <script src="Build/touchNOV28.loader.js"></script>
     <script>
             var initialize = async() =>{
                 var unityCanvas = document.querySelector("#unity-canvas");
@@ -112,9 +112,9 @@
                 
                 document.getElementById("startARDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/touchNOV14-1.data",
-                    frameworkUrl: "Build/touchNOV14-1.framework.js",
-                    codeUrl: "Build/touchNOV14-1.wasm",
+                    dataUrl: "Build/touchNOV28.data",
+                    frameworkUrl: "Build/touchNOV28.framework.js",
+                    codeUrl: "Build/touchNOV28.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
                     productName: "oct 31",
